# poly-graph

./: .gitignore  stack.yaml
poly-graph/: LICENSE  README.md  poly-graph.cabal
poly-graph-arbitrary/: README.md  poly-graph-arbitrary.cabal
poly-graph-arbitrary/src/Data/Graph/HGraph/: Arbitrary.hs
poly-graph-arbitrary/src/Data/Graph/Polymorphic/: Arbitrary.hs
poly-graph-arbitrary/test/: Spec.hs
poly-graph-persistent/: .gitignore  poly-graph-persistent.cabal
poly-graph-persistent/src/Data/Graph/HGraph/: Persistent.hs
poly-graph-persistent/src/Data/Graph/HGraph/Persistent/: Instances.hs  TH.hs
poly-graph-persistent/test/: Spec.hs  Spec2.hs  testdb.sqlite3
poly-graph/src/Data/Graph/: HGraph.hs  Polymorphic.hs
poly-graph/src/Data/Graph/HGraph/: Instances.hs  Internal.hs  TH.hs
poly-graph/src/Data/Graph/Polymorphic/: Internal.hs
poly-graph/test/: Spec.hs
