name:                poly-graph-persistent
version:             0.1.0.0
synopsis:            Special support for using `poly-graph` with `persistent`
description:         Please see README.md
homepage:            http://github.com/pseudonom/poly-graph
license:             MIT
license-file:        LICENSE
author:              Eric Easley
maintainer:          eric101111@gmail.com
copyright:           2016 Eric Easley
category:            Database
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Graph.HGraph.Persistent
  build-depends:       base >= 4.7 && < 5
                     , poly-graph
                     , transformers
                     , persistent
                     , poly-graph-arbitrary
  default-language:    Haskell2010

test-suite poly-graph-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , poly-graph
                     , poly-graph-persistent
                     , hspec
                     , persistent
                     , persistent-template
                     , transformers
                     , monad-logger
                     , resourcet
                     , persistent-sqlite
                     , fast-logger
                     , derive
                     , QuickCheck
                     , text
                     , lens
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/pseudonom/poly-graph
