name:                poly-graph-persistent
version:             0.1.0.0
synopsis:            Special support for using `poly-graph` with `persistent`
description:         Please see README.md
homepage:            http://github.com/pseudonom/poly-graph
license:             MIT
license-file:        LICENSE
author:              Eric Easley
maintainer:          eric101111@gmail.com
copyright:           2016 Eric Easley
category:            Database
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Graph.HGraph.Persistent
                     , Data.Graph.HGraph.Persistent.Instances
                     , Data.Graph.HGraph.Persistent.TH
  build-depends:       base >= 4.7 && < 5
                     , poly-graph
                     , transformers
                     , persistent
                     , persistent-template
                     , tagged
                     , generics-eot
                     , QuickCheck
                     , lens
                     , semigroups
                     , text
                     , containers
                     , template-haskell
  default-language:    Haskell2010

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , poly-graph
                     , poly-graph-persistent
                     , hspec
                     , persistent
                     , persistent-template
                     , transformers
                     , monad-logger
                     , resourcet
                     , persistent-postgresql
                     , fast-logger
                     , QuickCheck
                     , shakespeare
                     , text
                     , lens
                     , bytestring
                     , tagged
                     , vector-sized
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite presentation
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec2.hs
  build-depends:       base
                     , poly-graph
                     , poly-graph-persistent
                     , hspec
                     , persistent
                     , persistent-template
                     , transformers
                     , monad-logger
                     , resourcet
                     , persistent-postgresql
                     , fast-logger
                     , QuickCheck
                     , text
                     , lens
                     , bytestring
                     , tagged
                     , time
                     , shakespeare
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/pseudonom/poly-graph
