name:                poly-graph
version:             0.1.0.0
synopsis:            Polymorphic directed graphs
description:         Please see README.md
homepage:            http://github.com/pseudonom/poly-graph
license:             MIT
license-file:        LICENSE
author:              Eric Easley
maintainer:          eric101111@gmail.com
copyright:           2016 Eric Easley
category:            Data Structures
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Graph.HGraph
                     , Data.Graph.HGraph.Internal
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

test-suite poly-graph-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , poly-graph
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/pseudonom/poly-graph
